deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dev-translator-backend
  name: dev-translator-backend
  namespace: dev-translator
spec:
  selector:
    matchLabels:
      app: dev-translator-backend
  template:
    metadata:
      labels:
        app: dev-translator-backend
    spec:
      containers:
      - image: asia-south1-docker.pkg.dev/xplor-sunbird-rc/dev-translator/xplor-ai-services-translator:4f5a6cea
        imagePullPolicy: Always
        name: dev-translator-backend
        resources:
          requests:
            cpu: "1000m"
            memory: "6000Mi"
          limits:
            cpu: "2000m" 
            memory: "10000Mi"
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dev-translator-backend
  name: translator-svc
  namespace: dev-translator
spec:
  ports:
  - port: 5000
    targetPort: 8000
    protocol: TCP
  selector:
    app: dev-translator-backend
  type: NodePort
