ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "dev-translator-ingress"
  namespace: "dev-translator"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "xplor-static-ip"
    networking.gke.io/timeout: "90s"
    networking.gke.io/backend-config: '{"5000": "translator-backendconfig"}'
spec:
  tls:
  - hosts:
    - "translator-dev.thewitslab.com"
    secretName: "tls-secret"
  rules:
  - host: "translator-dev.thewitslab.com"
    http:
      paths:
      - path: "/*"
        pathType: "ImplementationSpecific"
        backend:
          service:
            name: "translator-svc"
            port:
              number: 5000
